added register form

--- a/static/header.html
+++ b/static/header.html
@@ -44,7 +44,7 @@
 <div class="ui large top fixed menu transition">
     <div class="ui container">
         <a class="active item" href="index.html">Home</a>
-        <a class="item" href="movies.html">Profil</a>
+        <a class="item" href="movies.html">Profile</a>
         <a class="item" href="series.html">Fligts</a>
         <a class="item" href="series.html">List of Flights</a>
         <a class="item" href="series.html"></a>
@@ -54,7 +54,7 @@
                 <a class="ui button green" id="loginModal3">Log in</a>
             </div>
             <div class="item">
-                <a class="ui primary button" href="signup.html">Sign Up</a>
+                <a class="ui primary button" href="register.html">Sign Up</a>
             </div>
         </div>
     </div>
