--- a/static/register.html
+++ b/static/register.html
@@ -6,5 +6,26 @@
 </head>
 <body>
 
+<div class="ui input">
+    name <input type="text" id="name" placeholder="name">
+</div>
+<div class="ui input">
+    surname <input type="text" id="surname" placeholder="surname">
+</div>
+<div class="ui input">
+    email <input type="email" id="email" placeholder="email">
+</div>
+<div class="ui input">
+    pesel <input type="number" id="pesel" placeholder="pesel">
+</div>
+<div class="ui input">
+    birthday <input type="text" id="birthday" placeholder="birthday">
+</div>
+<div class="ui input">
+    password <input type="password" id="password" placeholder="password">
+</div>
+
+
+
 </body>
 </html>
