login init, register update

--- a/static/register.html
+++ b/static/register.html
@@ -33,6 +33,13 @@
 <div class="wrapper">
     <form class="ui form headerslot field">
 
+
+        <div class="column">
+            <h2 class="ui blue image header">
+                <div class="content">
+                    Create your account.
+                </div>
+            </h2>
         <div class="four column row">
             <div class="ten wide column" style="width: 500px;">
                 <div class="field input">
@@ -73,6 +80,7 @@
                 </div>
 
                 <button class="ui inverted green button" type="submit">Create an account</button>
+            </div>
             </div>
 
 </div>
