--- a/static/header.html
+++ b/static/header.html
@@ -51,7 +51,7 @@
         <a class="item" href="series.html"></a>
         <div class="right menu">
             <div class="item">
-                <a class="ui button green" id="loginModal3">Log in</a>
+                <a class="ui button green" href="login.html">Log in</a>
             </div>
             <div class="item">
                 <a class="ui primary button" href="register.html">Sign Up</a>
