index and personal data init

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,9 +13,29 @@
     <script src="CSS/components/sidebar.js"></script>
     <script src="CSS/components/transition.js"></script>
 
+    <style>
+        .headerslot{
+            margin-top: 100px;
+        }
+        .wrapper {
+            width: 700px;
+            margin: 0 auto;
+        }
+    </style>
 
 </head>
 <body>
+<div id="myheader">
+    <script>$('#myheader').load('header.html');</script>
+</div>
+<div class="wrapper">
+    <form class="ui form headerslot field">
+
+
+
+
+            </form>
+        </div>
 
 </body>
 </html>
