--- a/src/main/resources/static/header.html
+++ b/src/main/resources/static/header.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head>usejj
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
@@ -13,39 +13,15 @@
     <script src="CSS/components/sidebar.js"></script>
     <script src="CSS/components/transition.js"></script>
 
-    <style type="text/css">
-
-        .modal {
-            position: fixed;
-            z-index: 1;
-            width: 100px; /* Full width */
-            height: 400px; /* Full height */
-            overflow: auto; /* Enable scroll if needed */
-            background-color: rgb(0, 0, 0); /* Fallback color */
-            background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-            padding-top: 60px;
-            padding-left: 20px;
-        }
-    </style>
 
 </head>
 <body>
 
-
-<script>
-    $(document).ready(function($){
-        $('#loginModal3').click(function(){
-            $('#modaldiv').modal({blurring: true}).modal('show');
-        });
-    });
-</script>
-
-<!-- top header -->
-<div class="ui large top fixed menu transition">
+<div class="ui large top fixed inverted menu transition">
     <div class="ui container">
-        <a class="active item" href="index.html">Home</a>
-        <a class="item" href="movies.html">Profile</a>
-        <a class="item" href="series.html">Fligts</a>
+        <a class="item" href="index.html">Home</a>
+        <a class="item" href="personal_data.html">Profile</a>
+        <a class="item" href="series.html">Flights</a>
         <a class="item" href="series.html">List of Flights</a>
         <a class="item" href="series.html"></a>
         <a class="item" href="series.html"></a>
@@ -59,8 +35,6 @@
         </div>
     </div>
 </div>
-
-
 
 </body>
 </html>
