--- a/src/main/resources/static/header.html
+++ b/src/main/resources/static/header.html
@@ -21,10 +21,9 @@
     <div class="ui container">
         <a class="item" href="index.html">Home</a>
         <a class="item" href="personal_data.html">Profile</a>
-        <a class="item" href="series.html">Flights</a>
-        <a class="item" href="series.html">List of Flights</a>
-        <a class="item" href="series.html"></a>
-        <a class="item" href="series.html"></a>
+        <a class="item" href="userflights.html">Your flights</a>
+        <a class="item" href="flights.html">All flights</a>
+        <a class="item" href="adminflights.html">List of Flights</a>
         <div class="right menu">
             <div class="item">
                 <a class="ui button green" href="login.html">Log in</a>
