all flights init

--- a/src/main/resources/static/personal_data.html
+++ b/src/main/resources/static/personal_data.html
@@ -61,8 +61,10 @@
                     <div class="five column row">
 
                         <div class="imageplaceholder five wide column left floated">
+                            <div class="image">
                             <div class="ui medium bordered fluid image">
                                 <img src="testimage.jpg">
+                            </div>
                             </div>
                         </div>
 
