--- a/static/header.html
+++ b/static/header.html
@@ -44,9 +44,11 @@
 <div class="ui large top fixed menu transition">
     <div class="ui container">
         <a class="active item" href="index.html">Home</a>
-        <a class="item" href="movies.html">Movies</a>
-        <a class="item" href="series.html">Series</a>
-        <a class="item">BLANK</a>
+        <a class="item" href="movies.html">Profil</a>
+        <a class="item" href="series.html">Fligts</a>
+        <a class="item" href="series.html">List of Flights</a>
+        <a class="item" href="series.html"></a>
+        <a class="item" href="series.html"></a>
         <div class="right menu">
             <div class="item">
                 <a class="ui button green" id="loginModal3">Log in</a>
@@ -60,12 +62,13 @@
 
 
 
-<!-- Login panel todo fix !-->
+<!-- Login panel
 <div id="modaldiv" class="ui modal" style="width: 400px; margin-left: -200px;">
     <div id="login modaldiv">
         <iframe width="363px" height="329.125px" frameborder="0" src="login.html"></iframe>
     </div>
 </div>
+!-->
 
 </body>
 </html>
