all front pages fix

--- a/src/main/resources/static/header.html
+++ b/src/main/resources/static/header.html
@@ -20,11 +20,11 @@
 
 <div class="ui large top fixed inverted menu transition">
     <div class="ui container">
-        <a class="item" href="">Home</a>
-        <a class="item" href="personal_data.html">Profile</a>
-        <a class="item" href="userflights.html">Your flights</a>
-        <a class="item" href="flights.html">All flights</a>
-        <a class="item" href="adminflights.html">List of Flights</a>
+        <a class="item" href="../templates/index.html">Home</a>
+        <a class="item" href="../templates/personal_data.html">Profile</a>
+        <a class="item" href="../templates/userflights.html">Your flights</a>
+        <a class="item" href="../templates/Flights.html">All flights</a>
+        <a class="item" href="../templates/adminflights.html">List of Flights</a>
         <div class="right menu">
             <div class="item">
                 <a class="ui button green" href="login.html">Log in</a>
