--- a/src/main/resources/static/header.html
+++ b/src/main/resources/static/header.html
@@ -21,10 +21,10 @@
         <a class="item" href="adminflights.html">List of Flights</a>
         <div class="right menu">
             <div class="item">
-                <a class="ui button green" href="login.html">Log in</a>
+                <a class="ui button green" href="login">Log in</a>
             </div>
             <div class="item">
-                <a class="ui primary button" href="register.html">Sign Up</a>
+                <a class="ui primary button" href="register">Sign Up</a>
             </div>
         </div>
     </div>
