--- a/src/main/resources/static/header.html
+++ b/src/main/resources/static/header.html
@@ -14,10 +14,10 @@
 
 <div class="ui large top fixed inverted menu transition">
     <div class="ui container">
-        <a class="item" href="">Home</a>
+        <a class="item" href="index">Home</a>
         <a class="item" href="personal_data.html">Profile</a>
         <a class="item" href="userflights.html">Your flights</a>
-        <a class="item" href="flights.html">All flights</a>
+        <a class="item" href="flights">All flights</a>
         <a class="item" href="adminflights.html">List of Flights</a>
         <div class="right menu">
             <div class="item">
