work on register controller

--- a/src/main/resources/static/header.html
+++ b/src/main/resources/static/header.html
@@ -14,7 +14,7 @@
 
 <div class="ui large top fixed inverted menu transition">
     <div class="ui container">
-        <a class="item" href="index">Home</a>
+        <a class="item" href="/">Home</a>
         <a class="item" href="userdata">Profile</a>
         <a class="item" href="userflights.html">Your flights</a>
         <a class="item" href="flights">All flights</a>
